# apollo

./: .env.example  .gitignore  AGENTS.md  README.md  RUNBOOK.md  SPEC_v1.md  config.yaml  pyproject.toml
data/market/: BTCUSDT_4h.csv  ETHUSDT_4h.csv
docs/: backtesting.md
docs/00_archived/: RUNBOOK.md  SPEC_v1.md  SPEC_v2.md
docs/01_architecture/: 01_SystemOverview.md  02_ModuleReference.md
docs/03_operations/: 01_Deployment.md  02_Monitoring.md
docs/04_development/: 01_GettingStarted.md  02_AddingStrategies.md  03_EventSystem.md
docs/05_reference/: 01_Configuration.md  02_API.md  03_DataSchemas.md  04_CLITools.md
docs/06_backtester/: 01_Overview.md  02_RunningBacktests.md
src/: __init__.py  main.py  models.py
src/api/: __init__.py  operator.py
tasks/: PRIORITY_ROADMAP.md  task-04.md  task-05.md  task-07.md  task-08.md  task-11.md  task-12.md  task-13.md  task-15.md  task-18.md  task-19.md  task-21.md  task-22.md  task-26.md
tests/: conftest.py  test_alert_webhooks.py  test_backtester_execution.py  test_backtester_funding.py  test_backtester_lookahead.py  test_backtester_reporting.py  test_backtester_spread.py  test_crowding.py  test_data_schema.py  test_dataset_tools.py  test_event_driven_backtest.py  test_event_mux.py  test_execution_exit.py  test_monitoring_logs.py  test_news_classifier.py  test_operator_api.py  test_paper_simulator_integration.py  test_performance_telemetry.py  test_regime.py  test_risk_engine.py  test_run_mode.py  test_scoring.py  test_sizing.py  test_spread_check.py  test_state.py  test_strategy_package.py  test_symbol_rules.py  test_trailing_stop.py  test_user_stream.py  test_volume_indicators.py
(+128 files in other folders)
